--- a/styles/actualites.css
+++ b/styles/actualites.css
@@ -60,9 +60,11 @@ nav {
 .naviguation:hover {
     background-color: var(--red-color);
     color: var(--font-color);
+    border: 2px solid var(--tertiaire-color);
 }
 .page-active {
     background-color: var(--red-color);
+    border: 2px solid var(--tertiaire-color);
     color: var(--font-color);
 }
 body {
