--- a/styles/reglements.css
+++ b/styles/reglements.css
@@ -24,13 +24,13 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 38vh;
+    height: 50vh;
 }
 .cadre-titre {
     display: flex;
     align-items: center;
     width: 100%;
-    margin: 15.5vh 0;
+    margin: 21vh 0;
 }
 .titre {
     height: 1px;
@@ -70,11 +70,55 @@ nav {
 body {
     margin-bottom: 5vh;
 }
-.section-activite {
+.section-reglement {
     padding-bottom: 4em;
 }
 .titre-activite {
     color: var(--tertiaire-color);
     margin: 6vh 2vw;
     font-size: 2em;
+}
+.titre-media {
+    color: var(--tertiaire-color);
+    margin: 6vh 2vw;
+    font-size: 2em;
+}
+.liste {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: 0 1em;
+    border-radius: 70px 0px 70px 0px;
+    padding: 2em;
+    background-color: var(--tertiaire-color);
+}
+.liste img {
+    height: 200px;
+    width: 200px;
+    object-fit: contain;
+    margin: auto;
+}
+.reglement {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    margin: 2vh 2vw;
+    width: 40%;
+    height: 350px;
+}
+.reglement:hover {
+    box-shadow: inset 0em 0em 5em 0em var(--red-color);
+    opacity: 0.9;
+    border-radius: 70px 0px 70px 0px;
+}
+.telecharger {
+    font-size: 1.5em;
+    text-align: center;
+    width: 80%;
+    color: var(--primaire-color);
+    text-decoration: none;
+    padding: 0.5em;
+    margin: auto;
 }
