--- a/styles/style.css
+++ b/styles/style.css
@@ -103,7 +103,7 @@ body {
     width: 100%;
     object-fit: cover;
     height: 25vh;
-    border-radius: 25px;
+    border-radius: 70px 0px 70px 0px;
 }
 h3 {
     font-size: 1.6em;
