--- a/styles/style.css
+++ b/styles/style.css
@@ -85,6 +85,7 @@ body {
 }
 .article {
     width: 35%;
+    height: 600px;
     background-color: var(--tertiaire-color);
     border-radius: 25px;
     padding: 2em 1.5em;
