--- a/styles/medias.css
+++ b/styles/medias.css
@@ -111,18 +111,52 @@ body {
 .liste img {
     height: 350px;
     width: 350px;
-    border-radius: 70px 0px 70px 0px;
+    border-radius: 70px 0px 0 0px;
     object-fit: cover;
-    margin: 0.5em 0.5em;
+    margin: 0;
 }
-.media:hover {
+.media-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 1em;
+}
+.media {
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    padding: 0.5em 0.5em 0 0.5em;
+}
+.media-content:hover {
     box-shadow: inset 0em 0em 5em 0em var(--red-color);
     opacity: 0.9;
     border-radius: 70px 0px 70px 0px;
 }
+.nb-likes {
+    font-size: 2em;
+    text-decoration: none;
+    color: var(--tertiaire-color);
+    width: 318px;
+    background-color: rgba(24,24,24, 0.5);
+    border-radius: 0 0 70px 0;
+    padding: 0.5em;
+    margin-bottom: 0.2em;
+}
+.coeur {
+    color: var(--tertiaire-color);
+    padding-right: 4.5em;
+}
+.coeur:hover {
+    color: darkred;
+    font-weight: bold;
+}
+.bold {
+    color: darkred;
+    font-weight: bold !important;
+}
 iframe {
-    border-radius: 70px 0px 70px 0px;
-    margin: 1vh auto;
+    border-radius: 70px 0px 0 0px;
+    margin: 0 auto;
     width: 350px;
     height: 350px;
 }
