Ajouts compteur likes

--- a/styles/medias.css
+++ b/styles/medias.css
@@ -147,6 +147,7 @@ body {
 .coeur {
     color: var(--tertiaire-color);
     padding-right: 3.8em;
+    cursor: pointer;
 }
 .coeur:hover {
     color: darkred;
