--- a/styles/agenda.css
+++ b/styles/agenda.css
@@ -63,6 +63,8 @@ nav {
     width: 90%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    height: 4vh;
 }
 .naviguation {
     font-size: 1.5vw;
@@ -79,6 +81,21 @@ nav {
     background-color: var(--red-color);
     color: var(--font-color);
     border: 2px solid var(--tertiaire-color);
+}
+.social {
+    transform: skew(10deg, 0deg);
+    padding: 0 0.5vw;
+    cursor: pointer;
+    height: 100%;
+}
+.facebook {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px 0px 10px 0px;
+    background-color: #FFF;
+}
+.facebook:hover {
+    box-shadow: 3px 3px 5px 3px var(--red-color);
 }
 .page-active {
     border: 2px solid var(--tertiaire-color);
