--- a/styles/style.css
+++ b/styles/style.css
@@ -117,15 +117,19 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
+    flex-wrap: wrap;
+    margin: auto;
 }
 .article {
     width: 20%;
+    min-width: 340px;
     height: 650px;
     background-color: var(--tertiaire-color);
     padding: 2em 1.5em;
     display: flex;
     flex-direction: column;
     border-radius: 70px 0px 70px 0px;
+    margin: 1em auto;
 }
 .lien-equipe {
     align-self: center;
