--- a/styles/medias.css
+++ b/styles/medias.css
@@ -267,6 +267,7 @@ body {
     display: none;
     max-width: 100%;
     height: auto;
+    text-align: center;
     animation: lightboxIn 500ms;
 }
 .lightbox-video.show {
