--- a/styles/gallerie.css
+++ b/styles/gallerie.css
@@ -113,119 +113,54 @@ body {
     margin: 6vh 2vw;
     font-size: 2em;
 }
-.section-equipes {
-    padding-bottom: 4em;
-}
-.titre-equipe {
+.titre-media {
     color: var(--tertiaire-color);
-    margin: 6vh 2vw 2vh 2vw;
+    margin: 6vh 2vw;
     font-size: 2em;
 }
-.equipe {
+.liste {
     display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
     flex-wrap: wrap;
-}
-.profil-equipe {
-    width: 27%;
-    min-width: 380px;
-    height: 470px;
-    background-color: var(--tertiaire-color);
+    justify-content: space-between;
+    margin: 0 1em;
     border-radius: 70px 0px 70px 0px;
-    padding: 2em 1em;
-    display: flex;
-    flex-direction: column;
-    margin: 2em 1em;
+    padding: 2em;
+    background-color: var(--tertiaire-color);
 }
-.profil-equipe:hover {
+.link-media-saison {
+    width: 280px;
+    height: 28vh;
+    padding: 1.5em 0 0 0;
+    text-decoration: none;
+    color: var(--primaire-color);
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+.icone-saison {
+    font-size: 7em;
+}
+.link-media {
+    width: 280px;
+    height: 28vh;
+    padding: 1.5em 0 0 0;
+    text-decoration: none;
+    color: var(--secondaire-color);
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+.icone {
+    color: var(--secondaire-color);
+    font-size: 7em;
+}
+.link-media-saison:hover {
     box-shadow: inset 0em 0em 5em 0em var(--red-color);
     opacity: 0.9;
     border-radius: 70px 0px 70px 0px;
 }
-.lien-equipe {
-    align-self: center;
-}
-.img-joueur {
-    width: 200px;
-    object-fit: cover;
-    height: 200px;
-    border-radius: 100%;
-}
-.nom-joueur {
-    font-size: 2.5em;
-    color: var(--primaire-color);
-    font-weight: bold;
-    text-align: center;
-    margin: 0;
-}
-.groupe {
-    display: flex;
-    justify-content: space-between;
-}
-.classement {
-    display: flex;
-    justify-content: space-between;
-}
-.titre-groupe {
-    font-size: 1.3em;
-    color: var(--second-color);
-}
-.nom-groupe {
-    font-size: 1.3em;
-    color: var(--red-color);
-    font-weight: bold;
-}
-.titre-classe {
-    font-size: 1.3em;
-    color: var(--second-color);
-}
-.position-classe {
-    font-size: 1.3em;
-    color: var(--red-color);
-    font-weight: bold;
-}
-.categorie {
-    display: flex;
-    justify-content: space-between;
-}
-.titre-categorie {
-    font-size: 1.3em;
-    color: var(--second-color);
-}
-.position-categorie {
-    font-size: 1.3em;
-    color: var(--red-color);
-    font-weight: bold;
-}
-.rang {
-    display: flex;
-    justify-content: space-between;
-}
-.titre-rang {
-    font-size: 1.3em;
-    color: var(--second-color);
-}
-.position-rang {
-    display: flex;
-    font-size: 1.3em;
-    color: var(--red-color);
-    font-weight: bold;
-}
-.rang-img {
-    width: 3em;
-    margin: auto 0vw 0vw 1vw;
-}
-.fonction {
-    display: flex;
-    justify-content: space-between;
-}
-.titre-fonction {
-    font-size: 1.3em;
-    color: var(--second-color);
-}
-.club-fonction {
-    font-size: 1.3em;
-    color: var(--red-color);
-    font-weight: bold;
+.link-media:hover {
+    box-shadow: inset 0em 0em 5em 0em var(--primaire-color);
+    opacity: 0.9;
+    border-radius: 70px 0px 70px 0px;
 }
