--- a/styles/resultats.css
+++ b/styles/resultats.css
@@ -113,3 +113,31 @@ body {
     margin: 6vh 2vw;
     font-size: 2em;
 }
+.actu-resultat {
+    display: flex;
+    flex-direction: column;
+}
+.article-resultat {
+    margin: 2vh auto;
+    width: 70%;
+    min-width: 900px;
+    background-color: var(--tertiaire-color);
+    border-radius: 70px 0px 70px 0px;
+}
+.lien-resultat {
+    margin: 2vh auto;
+    align-items: center;
+    padding: 0 1.5em;
+    display: flex;
+    justify-content: space-between;
+    text-decoration: none;
+}
+.bloc-titre {
+    width: 40%;
+}
+.bloc-contenu {
+    width: 40%;
+}
+.img-tournoi {
+    width: 100%;
+}
