--- a/styles/gallerie.css
+++ b/styles/gallerie.css
@@ -13,21 +13,23 @@ html {
     box-sizing: border-box;
     background: var(--primaire-color);
     background: var(--background-color);
+}
+body {
+    margin: 0;
+}
+main {
     margin: 0 3%;
 }
 header {
     background: url(../assets/img/accueil/banderole-vide.jpg) no-repeat;
     background-size: cover;
     background-size: 100% 100%;
-    transform: skew(-10deg, 0deg);
-    border-radius: 70px 0px 70px 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 40vh;
 }
 .cadre-titre {
-    transform: skew(10deg, 0deg);
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -36,9 +38,9 @@ header {
 }
 .logo-jcf {
     margin-bottom: 6vh;
-    margin-left: 3vw;
-    height: 70%;
-    width: 15%;
+    margin-left: 5vw;
+    height: 71%;
+    width: 10%;
 }
 .titre {
     display: flex;
@@ -72,7 +74,6 @@ nav {
     color: var(--red-color);
     font-weight: bold;
     border: 2px solid var(--red-color);
-    transform: skew(-10deg, 0deg);
     border-radius: 20px 0px 20px 0px;
     padding: 0.3vh 1.3vw;
     cursor: pointer;
@@ -82,28 +83,10 @@ nav {
     color: var(--font-color);
     border: 2px solid var(--tertiaire-color);
 }
-.social {
-    transform: skew(10deg, 0deg);
-    padding: 0 0.5vw;
-    cursor: pointer;
-    height: 100%;
-}
-.facebook {
-    width: 100%;
-    height: 100%;
-    border-radius: 10px 0px 10px 0px;
-    background-color: #FFF;
-}
-.facebook:hover {
-    box-shadow: 3px 3px 5px 3px var(--red-color);
-}
 .page-active {
     background-color: var(--red-color);
     border: 2px solid var(--tertiaire-color);
     color: var(--font-color);
-}
-body {
-    margin-bottom: 5vh;
 }
 .section-activite {
     padding-bottom: 4em;
@@ -163,4 +146,54 @@ body {
     box-shadow: inset 0em 0em 5em 0em var(--primaire-color);
     opacity: 0.9;
     border-radius: 70px 0px 70px 0px;
+}
+footer {
+    background-color: var(--tertiaire-color);
+    width: 100%;
+    height: 25vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.liens-off {
+    height: 15vh;
+    display: flex;
+    align-items: center;
+}
+.social {
+    padding: 0 0.5vw;
+    cursor: pointer;
+}
+.facebook {
+    height: 10vh;
+    border-radius: 10px 0px 10px 0px;
+    background-color: transparent;
+}
+.facebook:hover {
+    box-shadow: 3px 3px 5px 3px var(--red-color);
+}
+.moselle {
+    height: 10vh;
+    border-radius: 10px 0px 10px 0px;
+    border: 1px inset #019838;
+    background-color: transparent;
+}
+.moselle:hover {
+    box-shadow: 3px 3px 5px 3px var(--red-color);
+}
+.liste-contact {
+    color: var(--secondaire-color);
+    font-size: 1.2em;
+    list-style-type: disclosure-closed;
+    list-style-position: inside;
+}
+.contact-form {
+    text-decoration: none;
+    color: var(--secondaire-color);
+}
+.contact-form:hover, .contact:hover {
+    color: var(--primaire-color);
+}
+.icone-contact {
+    padding: 0 0.5em 0 1em;
 }
