--- a/styles/agenda.css
+++ b/styles/agenda.css
@@ -71,9 +71,9 @@ nav {
 .naviguation {
     font-size: 1.5vw;
     text-decoration: none;
-    color: var(--red-color);
+    color: var(--tertiaire-color);
     font-weight: bold;
-    border: 2px solid var(--red-color);
+    border: 2px solid var(--tertiaire-color);
     border-radius: 20px 0px 20px 0px;
     padding: 0.3vh 1.3vw;
     cursor: pointer;
@@ -96,11 +96,6 @@ nav {
     margin: 5vh 2vw;
     font-size: 2em;
 }
-body {
-    font-size: 14px;
-    font-family: "Helvetica Nueue",Arial,Verdana,sans-serif;
-    }
-
 #wrap {
     text-align: center;
     width: 950px;
@@ -151,55 +146,59 @@ body {
     border-radius: 6px;
     box-shadow: 0 1px 2px #C3C3C3;
     border: 10px outset var(--primaire-color);
-    }
+}
 
-    footer {
-        background-color: var(--tertiaire-color);
-        width: 100%;
-        height: 25vh;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-    }
-    .liens-off {
-        height: 15vh;
-        display: flex;
-        align-items: center;
-    }
-    .social {
-        padding: 0 0.5vw;
-        cursor: pointer;
-    }
-    .facebook {
-        height: 10vh;
-        border-radius: 10px 0px 10px 0px;
-        background-color: transparent;
-    }
-    .facebook:hover {
-        box-shadow: 3px 3px 5px 3px var(--red-color);
-    }
-    .moselle {
-        height: 10vh;
-        border-radius: 10px 0px 10px 0px;
-        border: 1px inset #019838;
-        background-color: transparent;
-    }
-    .moselle:hover {
-        box-shadow: 3px 3px 5px 3px var(--red-color);
-    }
-    .liste-contact {
-        color: var(--secondaire-color);
-        font-size: 1.2em;
-        list-style-type: disclosure-closed;
-        list-style-position: inside;
-    }
-    .contact-form {
-        text-decoration: none;
-        color: var(--secondaire-color);
-    }
-    .contact-form:hover, .contact:hover {
-        color: var(--primaire-color);
-    }
-    .icone-contact {
-        padding: 0 0.5em 0 1em;
-    }
+footer {
+    background-color: var(--tertiaire-color);
+    width: 100%;
+    height: 25vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.liens-off {
+    height: 15vh;
+    display: flex;
+    align-items: center;
+}
+.social {
+    padding: 0 0.5vw;
+    cursor: pointer;
+}
+.facebook {
+    height: 10vh;
+    border-radius: 10px 0px 10px 0px;
+    background-color: transparent;
+}
+.facebook:hover {
+    box-shadow: 3px 3px 5px 3px var(--red-color);
+}
+.moselle {
+    height: 10vh;
+    border-radius: 10px 0px 10px 0px;
+    border: 1px inset #019838;
+    background-color: transparent;
+}
+.moselle:hover {
+    box-shadow: 3px 3px 5px 3px var(--red-color);
+}
+.liste-contact {
+    color: var(--secondaire-color);
+    font-size: 1.2em;
+    list-style-type: disclosure-closed;
+    list-style-position: inside;
+}
+.contact-form {
+    text-decoration: none;
+    color: var(--secondaire-color);
+}
+.contact-form:hover, .contact:hover {
+    color: var(--primaire-color);
+}
+.icone-contact {
+    padding: 0 0.5em 0 1em;
+    font-size: 1.1em;
+}
+.icone-partenaire {
+    padding: 0 0.5em 0 1em;
+}
