--- a/styles/style.css
+++ b/styles/style.css
@@ -71,9 +71,9 @@ nav {
 .naviguation {
     font-size: 1.5vw;
     text-decoration: none;
-    color: var(--red-color);
+    color: var(--tertiaire-color);
     font-weight: bold;
-    border: 2px solid var(--red-color);
+    border: 2px solid var(--tertiaire-color);
     border-radius: 20px 0px 20px 0px;
     padding: 0.3vh 1.3vw;
     cursor: pointer;
@@ -127,13 +127,19 @@ nav {
     height: 25vh;
     border-radius: 70px 0px 70px 0px;
 }
-h3 {
+.titre-article {
+    height: 65px;
     font-size: 1.6em;
     color: var(--primaire-color);
     font-weight: bold;
     text-align: center;
+    margin: auto;
+    padding: 3% 20%;
 }
 .description-activite {
+    margin: auto;
+    padding: 10px 0%;
+    height: 190px;
     text-align: justify;
     font-size: 1.1em;
 }
@@ -141,8 +147,12 @@ h3 {
     color: var(--primaire-color);
     font-weight: bold;
     font-size: 1.2em;
+    margin: auto;
+    padding: 4% 0;
 }
 .prix {
+    margin: auto;
+    padding: 4% 0;
     font-size: 1.1em;
 }
 strong {
@@ -199,5 +209,9 @@ footer {
     color: var(--primaire-color);
 }
 .icone-contact {
+    padding: 0 0.5em 0 1em;
+    font-size: 1.1em;
+}
+.icone-partenaire {
     padding: 0 0.5em 0 1em;
 }
