--- a/styles/style.css
+++ b/styles/style.css
@@ -124,7 +124,7 @@ nav {
 .img-activite {
     width: 100%;
     object-fit: cover;
-    height: 25vh;
+    height: 220px;
     border-radius: 70px 0px 70px 0px;
 }
 .titre-article {
@@ -147,18 +147,19 @@ nav {
     color: var(--primaire-color);
     font-weight: bold;
     font-size: 1.2em;
-    margin: auto;
+    margin: 0;
     padding: 4% 0;
 }
 .prix {
     margin: auto;
-    padding: 4% 0;
+    padding: 4% 0 1% 0;
     font-size: 1.1em;
 }
 strong {
     color: var(--primaire-color);
 }
 .detail-prix {
+    margin: 0;
     font-size: 1em;
 }
 footer {
