--- a/styles/medias.css
+++ b/styles/medias.css
@@ -88,7 +88,7 @@ nav {
     border: 2px solid var(--tertiaire-color);
     color: var(--font-color);
 }
-.section-activite {
+.section-media {
     padding-bottom: 4em;
 }
 .titre-activite {
@@ -116,7 +116,7 @@ nav {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: 1em;
+    margin: auto;
     border-radius: 70px 0px 70px 0px;
     padding: 2em;
     background-color: var(--tertiaire-color);
