--- a/styles/resultats.css
+++ b/styles/resultats.css
@@ -106,6 +106,12 @@ nav {
     min-width: 900px;
     background-color: var(--tertiaire-color);
     border-radius: 70px 0px 70px 0px;
+    height: 220px;
+}
+.article-resultat:hover {
+    box-shadow: inset 0em 0em 5em 0em var(--red-color);
+    opacity: 0.9;
+    border-radius: 70px 0px 70px 0px;
 }
 .lien-resultat {
     margin: 2vh auto;
@@ -117,12 +123,19 @@ nav {
 }
 .bloc-titre {
     width: 40%;
+    text-align: center;
+    color: var(--primaire-color);
+    font-size: 1.3em;
 }
 .bloc-contenu {
     width: 40%;
+    margin: auto 0;
 }
 .img-tournoi {
     width: 100%;
+    height: 185px;
+    object-fit: cover;
+    border-radius: 70px 0 70px 0;
 }
 footer {
     background-color: var(--tertiaire-color);
