--- a/styles/style.css
+++ b/styles/style.css
@@ -57,7 +57,7 @@ header {
     width: 10%;
 }
 nav {
-    margin: 3vh 0 0 0;
+    margin: 3vh 0;
     width: 95%;
     display: flex;
     justify-content: space-around;
@@ -65,7 +65,7 @@ nav {
     height: 4vh;
 }
 .naviguation {
-    font-size: 1.3em;
+    font-size: 1.38em;
     text-decoration: none;
     color: var(--tertiaire-color);
     font-weight: bold;
@@ -143,7 +143,7 @@ main {
     color: var(--tertiaire-color);
     margin: auto;
     font-size: 2em;
-    padding: 10vh 0vw 3vh 2vw;
+    padding: 8vh 0vw 3vh 2vw;
 }
 .activites {
     display: flex;
