revision nouvelle version header + ajout lien rapide nav

--- a/styles/style.css
+++ b/styles/style.css
@@ -125,6 +125,7 @@ nav {
     color: var(--tertiaire-color);
     display: block;
     padding: 1vh 0;
+    max-width: 12vw;
 }
 .lien-rapide:hover {
     color: var(--red-color);
