nouveau design appliquées + création page html annexe

--- a/styles/categories.css
+++ b/styles/categories.css
@@ -173,6 +173,9 @@ nav {
 .lien-rapide:hover {
     color: var(--red-color);
 }
+.rapide {
+    padding: 1vh 0;
+}
 main {
     background: var(--background-color);
 }
@@ -187,58 +190,18 @@ main {
     color: var(--tertiaire-color);
     margin: auto;
     font-size: 2em;
-    padding: 8vh 0vw 3vh 2vw;
+    padding: 3vh 0vw 3vh 2vw;
 }
-#wrap {
-    text-align: center;
-    width: 950px;
-    margin: 0 auto;
-    padding: 2em;
-    background-color: var(--tertiaire-color);
-    border-radius: 70px 0 70px 0;
-    }
-
-#external-events {
-    float: left;
-    width: 150px;
-    padding: 0 10px;
-    text-align: left;
-    }
-
-#external-events h4 {
-    font-size: 16px;
-    margin-top: 0;
-    padding-top: 1em;
-    }
-
-.external-event { /* try to mimick the look of a real event */
-    margin: 10px 0;
-    padding: 2px 4px;
-    background: #3366CC;
-    color: #fff;
-    font-size: .85em;
-    cursor: pointer;
-    }
-
-#external-events p {
-    margin: 1.5em 0;
-    font-size: 11px;
-    color: #666;
-    }
-
-#external-events p input {
-    margin: 0;
-    vertical-align: middle;
-    }
-
-#calendar {
-/* 		float: right; */
-    margin: 0 auto;
-    width: 900px;
-    background-color: #FFFFFF;
-    border-radius: 6px;
-    box-shadow: 0 1px 2px #C3C3C3;
-    border: 10px outset var(--primaire-color);
+.retour-gallerie {
+    margin: 0vh 2vw 0vh 2vw;
+    font-size: 4em;
+    color: var(--red-color);
+}
+.retour-gallerie:hover {
+    color: var(--primaire-color);
+}
+.icone-retour {
+    margin-top: 3vh;
 }
 footer {
     background-color: var(--tertiaire-color);
