--- a/styles/grades.css
+++ b/styles/grades.css
@@ -1,33 +1,72 @@
 :root {
-    --primaire-color: #ED2527;
+    --primaire-color: #B10101;
     --secondaire-color: #181818;
     --tertiaire-color:  #F9F9F9;
     --font-color: #000;
     --red-color: #EDC73E;
     --background-color: linear-gradient(to bottom, #181818 0%, #ED2527 50%, #F9F9F9 100%);
 }
-* {
-    font-family: 'Rubik', sans-serif;;
+@keyframes spinner {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
 }
-html {
+@keyframes transition {
+    0% {
+        transform: translateX(-150vw);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+@keyframes loader {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+@keyframes defilement {
+    0% {
+        transform: translateY(150vw);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+@keyframes size {
+    0% {
+        height: 490px;
+    }
+    100% {
+        height: 670px;
+    }
+}
+@font-face {
+    font-family: "j.d";
+    font-style: normal;
+    font-weight: 400;
+    src: url("../assets/fonts/jd/j.d.ttf");
+}
+* {
+    font-family: 'Rubik', 'sans-serif';
     box-sizing: border-box;
-    background: var(--primaire-color);
-    background: var(--background-color);
 }
 body {
     margin: 0;
 }
-main {
-    margin: 0 3%;
-}
 header {
-    background: url(../assets/img/accueil/banderole-vide.jpg) no-repeat;
-    background-size: cover;
-    background-size: 100% 100%;
+    background-color: var(--secondaire-color);
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 40vh;
+    height: 42vh;
 }
 .cadre-titre {
     display: flex;
@@ -37,7 +76,6 @@ header {
     height: 32.5vh;
 }
 .logo-jcf {
-    margin-bottom: 6vh;
     margin-left: 5vw;
     height: 71%;
     width: 10%;
@@ -46,47 +84,110 @@ header {
     display: flex;
     align-self: center;
     justify-content: center;
-    font-family: 'Caesar Dressing', cursive;
+    font-family: 'j.d', 'sans-serif';
     width: 50%;
     font-size: 8vh;
     letter-spacing: 0.3em;
-    padding-bottom: 0vh;
     text-align: center;
-    margin: 0;
+    margin: 2vh 0 0 0;
+    line-height: 12vh;
+    color: var(--tertiaire-color);
 }
 .logo-ffjda {
-    margin-bottom: 6vh;
     margin-right: 3vw;
     height: 60%;
     width: 10%;
 }
 nav {
-    margin: 2vh 0;
-    width: 90%;
+    margin: 3vh 0;
+    width: 95%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     height: 4vh;
 }
 .naviguation {
-    font-size: 1.5vw;
+    font-size: 1.3em;
     text-decoration: none;
     color: var(--tertiaire-color);
     font-weight: bold;
     border: 2px solid var(--tertiaire-color);
     border-radius: 20px 0px 20px 0px;
-    padding: 0.3vh 1.3vw;
+    margin: auto 0.2vw;
+    text-align: center;
     cursor: pointer;
+    padding: 0.5vh 1.3vw;
+    z-index: 10;
+
 }
 .naviguation:hover {
-    background-color: var(--red-color);
-    color: var(--font-color);
-    border: 2px solid var(--tertiaire-color);
+    background-color: var(--primaire-color);
+    border: 2px solid var(--red-color);
 }
 .page-active {
-    background-color: var(--red-color);
-    border: 2px solid var(--tertiaire-color);
-    color: var(--font-color);
+    background-color: var(--primaire-color);
+    border: 2px solid var(--red-color);
+    color: var(--red-color);
+}
+.lien-nav {
+    text-decoration: none;
+    color: var(--tertiaire-color);
+}
+.naviguation:hover .lien-nav {
+    color: var(--red-color);
+}
+.lien-actif {
+    color: var(--red-color);
+    text-decoration: none;
+}
+.nav-rapide {
+    height: 1px;
+    left: 0;
+    overflow: hidden;
+    position: absolute;
+    top: -10000px;
+    width: 1px;
+    text-align: start;
+    padding: 1vh 0;
+}
+.naviguation:hover .nav-rapide {
+    animation: loader 300ms ease-in-out;
+    height: auto;
+    width: auto;
+    position: initial;
+    overflow: visible;
+}
+.nav-rapide:hover {
+    height: auto;
+    width: auto;
+    position: initial;
+    overflow: visible;
+}
+.lien-rapide {
+    text-decoration: none;
+    color: var(--tertiaire-color);
+    display: block;
+    padding: 1vh 0;
+    max-width: 12vw;
+}
+.lien-rapide:hover {
+    color: var(--red-color);
+}
+main {
+    background: var(--background-color);
+}
+.principal-content {
+    margin: 0 3%;
+}
+.section-principal {
+    padding-bottom: 4em;
+}
+.titre-section {
+    animation: transition 300ms both;
+    color: var(--tertiaire-color);
+    margin: auto;
+    font-size: 2em;
+    padding: 8vh 0vw 3vh 2vw;
 }
 footer {
     background-color: var(--tertiaire-color);
@@ -105,12 +206,12 @@ footer {
     padding: 0 0.5vw;
     cursor: pointer;
 }
-.facebook {
+.logo-lien-footer {
     height: 10vh;
     border-radius: 10px 0px 10px 0px;
     background-color: transparent;
 }
-.facebook:hover {
+.logo-lien-footer:hover {
     box-shadow: 3px 3px 5px 3px var(--red-color);
 }
 .moselle {
